--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -155,7 +155,7 @@
     padding: 0;
     display: block;
     color: #fff;
-    padding: 16px 0 16px 20px !important;
+    padding: 10px 0 10px 20px !important;
     transition: background 0.4s ease 0s;
     text-transform: capitalize;
   }
@@ -235,6 +235,8 @@
   }
 
   .header-navigation ul.navigation-box {
+    padding-bottom: 20px;
+    border: none;
     display: block;
     margin: 0 !important;
     width: 100%;
@@ -310,7 +312,7 @@
   }
 
   .site-header.header-one .header-navigation .container {
-    max-width: 90%;
+    max-width: 100%;
   }
 
   .site-header.home-page-two .header-navigation .container .menu-toggler {
@@ -324,9 +326,13 @@
 .header-navigation ul.navigation-box > li > a {
     color: #1C2460 !important;
 }
+.header-navigation .container .logo-box {
+  margin: auto !important;
+  max-width: 85%;
+}
 .ov-score {
   background: #fff;
-  margin: 0;
+  margin: 0 0 20px 0;
   box-shadow: 0px 20px 55px #00000017;
   border-radius: 5px;
   padding: 10px 15px;
@@ -341,12 +347,43 @@
 #wrapper{
   background: #F6F8F9;
 }
+.showcontent h2 {
+  font-size: 18px;
+  text-align: left;
+  color: #1C2460;
+  display: inline-block;
+  padding-bottom: 0;;
+}
+.showcontent h3 {
+  font-size: 16px;
+  text-align: left;
+  
+}
+.head-btn {
+  width: 100px;
+  font-size: 16px;
+  color: #1C2460;
+  margin-left: 20px;
+}
+.covid19-box>h4 {
+  text-align: left;
+  font-size: 20px;
+  letter-spacing: 1.4px;
+  color: #1C2460;
+}
+.covid19-box {
+  border: 1px solid #CCCCCC;
+  border-radius: 20px;
+  padding: 20px;
+  display: block;
+}
+
 .showcontent {
-  padding: 20px 10px; 
-  background: #F6F8F9 ; 
+  padding: 20px 15px; 
+  background: #ffffff ; 
    -webkit-box-shadow: none; 
    box-shadow: none;
-  border-radius: 0px;
+  border-radius: 8px;
 }
 .col-sm-12{
   padding-right: 0px; 
@@ -359,7 +396,7 @@
   width: 90%;
 }
 .header-two{
-  padding: .5rem 20px .5rem 20px;
+  padding: .5rem 0 0 0 ;
 
 }
 
@@ -385,11 +422,10 @@
   display: none;
 }
 .sm-box{
-  padding-top:20px;
-  padding-bottom: 20px;
+  padding:25px 20px;
 }
 .header-navigation .container {
- max-width: 85%;
+ max-width: 100%;
 }
 .airvays-section {
   padding: 20px 0;
@@ -402,6 +438,64 @@
   -webkit-box-shadow: 0px 20px 55px #00000014;
   box-shadow: -10px 50px 55px #00000014;
 }
+.line-block>p {
+  color: #333333;
+  margin-bottom: .5rem;
+  padding-right: 20px;
+  display: inline-block;
+}
+.covid-place-desc>p {
+  margin-bottom: 10px;
+  color: #333333;
+  font-size: 13px;
+  text-align: left;
+}
+.sidebar-mobile a {
+  border: 1px solid #1C2460; 
+  display: block;
+  color: black;
+  font-size: 14px;
+  border-radius: 8px;
+  padding: 5px 15px;
+  margin-left: 15px;
+  text-decoration: none;
+}
+.showcontent-dest {
+  padding: 30px 20px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  margin-bottom: 20px;
+  box-shadow: none;
+  border-radius: 0;
+}
+ 
+.sidebar-mobile a.active {
+  display: inline-block;
+  background:#1C2460 ;
+  color: rgb(255, 255, 255);
+}
+.sidebar-mobile a.hover {
+  position: revert;
+  display: inline-block;
+  background:#1C2460 ;
+  color: rgb(255, 255, 255);
+}
+.sidebar-mobile {
+  display:inline-flex;
+  padding:10px 0;
+  margin-bottom: 20px;
+  
+  overflow: overlay;
+}
+td {
+  font-size: 14px;
+}
+.line-block>p {
+  text-align: left;
+  font-size: 12px;
+  letter-spacing: 0px;
+  color: #333333 !important;
+}
+
 
 .airvays-content>h1 {
   color: #1C2460;
@@ -414,8 +508,39 @@
   font-weight: 400;
   margin-bottom: 40px;
 }
-header.header-one .header-navigation .container {
-  padding-left: 30px !important;
+
+.img-popdes,.img-popdes-1 {
+  
+  padding-bottom: 20px;
+  height: 30vh;
+  width: 100%;
+}
+.form-popup {
+  padding: 1rem 0rem;
+}
+.img-popdes>img, .img-popdes-1>img, .img-popdes-2>img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  padding: 0;
+}
+.img-content>p {
+  margin-bottom: 0rem !important;
+}
+.img-col-dest {
+  padding: 0 15px 0 15px;
+}
+.airvays-img-dest {
+  padding-bottom: 10px;
+}
+.covid-box {
+  padding: 15px 0px;
+}
+.percentage-1 {
+  width: 100%;
+}
+.mb-circle{
+  padding:0 5px;
 }
 }
 
@@ -423,8 +548,11 @@ header.header-one .header-navigation .container {
 
 
 @media (min-width: 769px){
-  .header-navigation ul.navigation-box > li > a {
+  ul.stricky-menu > li > a {
       color: #ffffff !important;
+  }
+  ul.head-2>li>a {
+    color: #ffffff !important;
   }
   }
 @media only screen and (max-width: 320px) {
@@ -522,6 +650,16 @@ header.header-one .header-navigation .container {
   .banner-style-one {
     padding-bottom: 100px;
   }
+  
+.d-sm-block {
+    display: block!important;
+}
+.blog-grid-container {
+  display: grid;
+  grid-gap: 40px;
+  gap: 40px;
+  grid-template-columns: auto auto !important;
+}
 
   .banner-style-one .banner-mock {
     top: 5%;
@@ -614,23 +752,14 @@ header.header-one .header-navigation .container {
   }
 
   .site-footer .inner-container {
-    padding-bottom: 56px;
+    padding: 20px 0 25px 0;
   }
 
-  .banner-style-one.home-page-two .banner-mock {
-    -webkit-transform: scale(0.45);
-    -ms-transform: scale(0.45);
-    -o-transform: scale(0.45);
-    transform: scale(0.45);
-    transform-origin: right center;
-    right: 0;
-  }
+
   .inner-banner {
     padding-top: 200px;
   }
-  .reply-block {
-    margin-bottom: 60px;
-  }
+
   .sidebar {
     width: 100%;
     max-width: 480px;
@@ -643,6 +772,16 @@ header.header-one .header-navigation .container {
   .banner-style-one .banner-mock {
     display: none;
   }
+  .blog-grid-container{
+    display: grid;
+    gap: 50px;
+    grid-template-columns: auto  ;
+    padding: 15px 0;
+    flex-direction: row;
+  }
+
+
+
 }
 
 @media (max-width: 480px) {
